# ft-jupyter

./: README.md  pyproject.toml
notebooks/: page_manager.ipynb
src/ft_jupyter/: __init__.py  core.py
